force-app/main/default/objects/Meeting_Minutes__c/Meeting_Minutes__c.object-meta.xml
<CustomObject>
    <description>Stores notes and minutes from advisor-client meetings for AI-driven summarization.</description>
    <label>Meeting Minutes</label>
    <nameField>
        <label>Meeting Minutes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Minutes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>